Bug #26936 Forum UI should be proper     -Fixed the alignment of blocks (Post, Forum name).     -Fixed the alignment of Drop-down (Filter By Group and Filter By).     -Fixed overlapping of Show LTI key and URL Button.

--- a/web/css/forums.css
+++ b/web/css/forums.css
@@ -43,7 +43,6 @@ span.leftbtns img {
 }
 .block {
 	min-height: 36px;
-    
 }
 .pseudohidden {
 	overflow: hidden;
@@ -475,6 +474,7 @@ margin: 20px;
     background-color: #12856D !important;
     color:whitesmoke !important;
     border-radius:0px !important;
+    border: none;
 }
 .hide-button {
     color: #000 !important;
@@ -520,3 +520,9 @@ table.search-forum tr.tagged {
 .post-reply-message-textarea table,.post-reply-message-textarea iframe {
     max-width: 100% !important;
 }
+
+.white-color{
+    color: #ffffff;
+}
+
+
